@@ -81,6 +81,9 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>io.github.ryanoviski.hestia.HestiaLauncher</mainClass>
+                    <options>
+                        <option>--enable-native-access=javafx.graphics,ALL-UNNAMED</option>
+                    </options>
                 </configuration>
             </plugin>
         </plugins>
